[tool.poetry]
name = "traffic-light-ml"
version = "0.1.0"
description = ""
authors = ["Kun Ran <rankun203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
autopep8 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
