[tool.poetry]
name = "traffic-light-ml"
version = "0.1.0"
description = ""
authors = ["Kun Ran <rankun203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
autopep8 = "^2.1.0"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
matplotlib = "^3.8.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
torch = "^2.3.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [".", "simulator"]
